feat: unified login, ShipperFilter, avatarUrl, release 21, skip E2E tests